corrected footer overflowing

--- a/src/style.css
+++ b/src/style.css
@@ -154,8 +154,10 @@ main {
 footer {
   margin-top: 1rem;
   background-color: var(--tertiary);
-  padding: 0.5rem;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 footer .footer-information {
@@ -197,12 +199,12 @@ footer .footer-information {
 
 .page-wrap {
   min-height: 100%;
-  margin-bottom: -60px;
+  margin-bottom: -75px;
 }
 
 footer,
 .page-wrap:after {
-  height: 60px;
+  height: 75px;
 }
 
 .page-wrap:after {
